[package]
name = "get-my-notion-mcp"
version = "0.2.4"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
base64 = "0.22.1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6.4"
